Add class to control cursor visibility.

--- a/PointerWarp/PointerWarp.csproj
+++ b/PointerWarp/PointerWarp.csproj
@@ -53,6 +53,7 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="HotKeyManager.cs" />
+    <Compile Include="VisibilityManager.cs" />
     <Compile Include="WarpManager.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
